week-06/labs/lab-02-gateway-api/solution/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
    student: jlgore
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  type: ClusterIP
