week-06/labs/lab-02-gateway-api/solution/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  labels:
    app: uptime-kuma
    student: jlgore
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - jlgore.status.lab.shart.cloud
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
